# BiS

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: bioinformatics_glossary.md  fibrosis_case_study.md  fibrosis_immune_response_case_study.md  glossary.md  impact.md  open_source_growth.md  project_ideas.md  project_plan.md  public_dataset_tutorial_plan.md  release_notes_v0.1.0.md  research_focus.md  single_cell_rna_seq_starter.md  single_cell_starter.md
examples/: example_notes.md  fibrosis_immune_response_note.md
src/: note_summarizer.py
src/bis_notes/: __init__.py  cli.py  summarizer.py
tests/: test_cli.py  test_summarizer.py
